# argos-python

./: CMakeCache.txt  CMakeLists.txt  Makefile  README.md  cmake_install.cmake  diffusion_1.argos  hello.cpp  py_actusensor_wrapper_epuck.cpp  py_actusensor_wrapper_epuck.h  py_actusensor_wrapper_footbot.cpp  py_actusensor_wrapper_footbot.h  py_actusensor_wrapper_generic.cpp  py_actusensor_wrapper_generic.h  py_controller.cpp  py_controller.h  py_environment_wrapper.cpp  py_environment_wrapper.h  py_loop_function.cpp  py_loop_function.h  py_qtuser_function.cpp  py_qtuser_function.h  py_wrapper.cpp  py_wrapper.h  test.py
Examples/: diffusion_1.argos  diffusion_1_controller.py
examples/: aggregation_1.argos  aggregation_10.argos  aggregation_1_python.py  aggregation_epuck.argos  aggregation_epuck.py  diffusion_10_python.argos  diffusion_1_epuck.argos  diffusion_1_python.argos  diffusion_controller_epuck.py  diffusion_controller_python.py  diffusion_distance_scanner.argos  diffusion_distance_scanner.py  flocking.argos  flocking_python.py  gripping.argos  gripping_python.py  sync_epuck.argos  synchronization_python.argos  synchronization_python.py  synchronization_range_and_bearing.argos  synchronization_range_and_bearing.py
loop_functions/: id_qtuser_functions.cpp  id_qtuser_functions.h
presentation/: presentation.aux  presentation.bbl  presentation.blg  presentation.pdfpc  presentation.tex  presento.aux
report/: bibliography.bib  document.bib  report.aux  report.bbl  report.blg  report.tex
src/: CMakeLists.txt  py_actusensor_wrapper_footbot.h  py_controller.h  py_wrapper.cpp  py_wrapper.h
(+21 files in other folders)
